note des btree et queue files

--- a/Training/CMakeLists.txt
+++ b/Training/CMakeLists.txt
@@ -6,15 +6,17 @@ project(Training C)
 include_directories(.)
 
 add_library(Training STATIC SList.c SList.h
-        tree.c
-        tree.h
-        main_btree.c)
+        #tree.c
+        #tree.h
+        #main_btree.c
+)
 
 add_executable(Runner main_slist.c
-        tree.c
-        tree.h
-        main_btree.c
-        Queue.c
-        Queue.h)
+        #tree.c
+        #tree.h
+        #main_btree.c
+        #Queue.c
+        #Queue.h
+)
 
 target_link_libraries(Runner PRIVATE Training)
